--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.1.6",
     "@astrojs/tailwind": "^5.1.4",
     "@fontsource-variable/onest": "^5.1.1",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "astro": "^5.1.5",
     "preact": "^10.25.4",
-    "react": "^19.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
