--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "preact": "^10.25.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
     "tailwindcss-animated": "^1.1.2"
   }
 }
